--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,21 +7,13 @@
     android:fitsSystemWindows="true"
     tools:context="com.lulisoft.sunshine.DetailActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/weather_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_detail" />
+        android:layout_height="match_parent"
+        tools:context="com.lulisoft.sunshine.DetailActivity"
+        tools:ignore="MergeRootFrame" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
