--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,7 @@
 
     <LinearLayout
         android:gravity="center_vertical"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -33,7 +33,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:orientation="vertical">
@@ -64,7 +64,8 @@
                 <ImageView
                     android:id="@+id/detail_icon"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
 
                 <TextView
                     android:id="@+id/detail_description_textview"
@@ -79,6 +80,7 @@
         <LinearLayout
             android:layout_height="match_parent"
             android:layout_marginRight="0dp"
+            android:layout_marginEnd="0dp"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:orientation="vertical">
