--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -5,7 +5,8 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:background="@drawable/touch_selector">
+    android:background="@drawable/touch_selector"
+    android:baselineAligned="false">
 
     <FrameLayout
         android:layout_width="60dp"
@@ -14,7 +15,8 @@
             android:id="@+id/list_item_icon"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true" />
     </FrameLayout>
 
     <LinearLayout
