--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -20,7 +20,6 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <!-- This Space is only there to line the image up with the
@@ -64,7 +63,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@id/layout_center"
         android:layout_below="@id/appbar"
-        tools:layout="@android:layout/list_content" />
+        tools:layout="@android:layout/list_content"
+        android:choiceMode="singleChoice"
+        app:autoSelectView="true"/>
 
     <!-- This is used to give the card the appropriate margin
          list_item_extra_padding +
