--- a/app/src/main/res/layout-sw600dp/fragment_main.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_main.xml
@@ -1,18 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForecastFragment">
-    <ListView
+    <android.support.v7.widget.RecyclerView
         style="@style/ForecastListStyle"
-        android:id="@+id/listview_forecast"
+        android:id="@+id/recyclerview_forecast"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null" />
+        android:layout_height="match_parent"/>
     <!-- empty list -->
     <TextView
-        android:id="@+id/listview_forecast_empty"
+        android:id="@+id/recyclerview_forecast_empty"
         android:text="@string/empty_forecast_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
