--- a/app/src/main/res/values-sw600dp/styles.xml
+++ b/app/src/main/res/values-sw600dp/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="ForecastListSyle">
+    <style name="ForecastStyle">
         <item name="android:choiceMode">singleChoice</item>
     </style>
 </resources>
